Restore fixed navbar and fix overlap anchor links issue

--- a/assets/index.css
+++ b/assets/index.css
@@ -1,5 +1,5 @@
-.markdown-body {
-  padding-top: 0;
+body {
+  padding-top: 64px;
 }
 
 .footnotes p {
